# Golfcart

./: .gitignore  READEME.md  README.md  ros-rename.bash
ControlBoard/: GolfcartController.kicad_pcb  GolfcartController.net  GolfcartController.pro  GolfcartController.sch  GolfcartController.xml
ControlBoard/PSoC5.pretty/: PSoC5_Dev.kicad_mod
Documentation/: Using the PSoC nodes.odg
Driving Scripts/: Drive_speed_program  Drive_speed_program.py  gps_test.py  joystickControl.py  keyboard_teleop_packesteer_v2.py  keyboard_teleop_packesteer_v3.py  keyboard_teleop_packetsteer.py  keyboard_teleop_v2.py  keyboard_teleop_v3.py  packetserial_V2.py  steer_enc_testing.py
Driving Scripts/Driving Program/: conrollerDriver-Gui.py  controllerClass.py  controllerDriver.py  ktp_v4_steerROScommands.py  serialCommunication.py
Jared's Scripts/: Drive_speed_program.py  Drive_speed_program.py~  Drive_speed_program~  keyboard_teleop_packesteer_v2.py  keyboard_teleop_packesteer_v2.py~  keyboard_teleop_packesteer_v3.py  keyboard_teleop_packesteer_v3.py~  keyboard_teleop_packetsteer.py~  keyboard_teleop_v2.py  keyboard_teleop_v3.py~  packetserial_V2.py~  steer_enc_testing.py  steer_enc_testing.py~
Jared's Scripts/Driving Program/: controller.py  controllerDriver.py  (+2 more)
KiCad/: PSoC5-cache.lib  PSoC5.bak  PSoC5.pro  PSoC5.sch  Roadrunner.sch
cc_usb_cam/: #usb_cam_raw.launch#  CMakeLists.txt  CMakeLists.txt~  usb_cam_raw.launch~
cmvision/: colorgui.launch  colorgui.launch~
psocFirmware/: psocFirmware.app
roadrunner_ws/br_gps_Cathy_Edit/gpsd_client/: CMakeLists.txt  package.xml
(+554 files in other folders)
